src/pages/style.css
@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/hk-grotesk.min.css");
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");

* {
  font-family: "HK Grotesk", "Inter", "Karla", sans-serif;
}

/* * {
    margin: 0px;
    padding: 0px;
} */

#header-section {
  text-align: center;
  font-size: 2.5rem;
  padding: 6px;
}

#header-spark-text {
  -webkit-text-stroke: 2px black;
  color: rgb(0, 0, 0, 0);
}

#about-section,
#values-section,
#work-section,
#why-join-section,
#join-section,
#socials-section {
  margin: auto;
  max-width: 760px;
  margin-bottom: 60px;
  padding: 6px;
}

h2 {
  font-family: "IBM Plex Mono", monospace;
  color: #383838;
  font-size: 1rem;
  text-transform: uppercase;
  font-weight: 400;
}

.larger-text {
  font-size: 1.2rem;
}

.bold {
  font-weight: 600;
}

/* about-stat-container">
            <p className="about-stat">20</p>
            <p className="about-caption">Active Members</p> */

.about-stat-container {
  width: 33%;
  display: inline-block;
}

.about-stat {
  font-family: "IBM Plex Mono", monospace;
  font-size: 80px;
  -webkit-text-stroke: 2px black;
  font-weight: 800;
}

.about-caption {
  font-style: italic;
}

h3 {
  font-weight: 500;
  font-size: 1.2rem;
}

.values-container, .why-join-container {
  width: 30%;
  vertical-align: top;
  display: inline-block;
}

.values-spacer, .why-join-spacer {
  width: 30px;
  display: inline-block;
}

button {
  background-color: white;
  color: black;
  border: 2px solid black;
  padding: 8px 30px 8px 30px;
  font-family: "HK Grotesk", "Inter", "Karla", sans-serif;
  font-size: 0.9rem;
  font-weight: 500;
}

button:hover {
  cursor: pointer;
  
  background-color: black;
  color: white;
  transition: all .2s ease;
}

#socials-section {
  line-height: 150%;
}

#socials-section a {
  color: black;
  text-decoration: none;
}

#socials-section a:hover {
  text-decoration: underline;
}

/* ANIMATIONS */
#header-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
}

#about-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
  animation-delay: 0.1s;
}

#values-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
  animation-delay: 0.2s;
}

#work-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
  animation-delay: 0.3s;
}

#why-join-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
  animation-delay: 0.4s;
}

#join-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
  animation-delay: 0.5s;
}

#socials-section {
  opacity: 0;
  animation: fadeinfromtop 0.2s forwards;
  animation-delay: 0.6s;
}

/* MOBILE VIEW */
@media (max-width: 760px) {
  .values-container, .why-join-container {
    width: 100%;
  }
}

